# shouter

./: CMakeLists.txt  main.cpp  shout.lsp
examples/fifo/: alsa-capture  launch.sh  shout.lsp  update-metadata
include/: configurer.h  log.h  shouter.h  source.h  sourcefifo.h  stream.h  streamfifo.h
lib/: CMakeLists.txt  configurer.cpp  log.cpp  shouter.cpp  source.cpp  sourcefifo.cpp  stream.cpp  streamfifo.cpp
